<resources>
    <string name="app_name">Kiosk App</string>
    <string name="order_here">Order here</string>
    <string name="name">Enter Name</string>
    <string name="email">Email Address</string>
    <string name="phone">Enter Mobile Number</string>
    <string name="password">Password</string>
    <string name="dine_in">Dine In</string>
    <string name="take_away">Take away</string>
    <string name="breakfast_menu">Breakfast Menu</string>
    <string name="paper_dosa">Paper Dosa</string>
    <string name="eat_in">MY ORDER - EAT IN</string>
    <string name="order_empty">Your order is empty</string>
    <string name="cancel_order">Cancel order</string>
    <string name="done">Done</string>
    <string name="card_apyment">Card Payment</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="select_card_type">Select card type</string>
    <string name="pay_at_counter">Pay at The
Counter</string>
    <string name="cash">(Cash, Cards or Coupons)</string>
    <string name="pay_here">Pay here</string>
    <string name="cards_only">(Cards Only)</string>
    <string name="how_to_pay">How would you like to pay</string>
    <string name="your_order">your order will be sent to the kitchen,
after you`ve completed payment.</string>
    <string name="correct_order">Dear Prashant,\n
Is this correct order.</string>
    <string name="thank_you">"Thank you Prashant!</string>
    <string name="order_no">Your Order no. is</string>
    <string name="order_serving_time">Order Time</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="test_txt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>
    <string name="condiments">Condiments</string>
    <string name="login_txt">Do you already have an account?</string>
    <string name="click_here">Click Here</string>
    <string name="login">Login</string>
    <string name="guest_user">Proceed without logging in</string>
    <string name="cancel">Cancel</string>
    <string name="txt_continue">Continue</string>
    <string name="name_error">Please enter name</string>
    <string name="phone_error">Please enter phone number</string>
    <string name="phone_validation_error">Please enter valid phone number</string>
    <string name="congratulations">Congratulations :</string>
    <string name="redeem_txt">You Will Get 100 Loyalty Points Redeem </string>
    <string name="redeem_coupon_code">Redeem Coupon Code</string>
    <string name="coupon_code">Apply Coupon Code</string>
    <string name="coupon">Enter Coupon Code</string>
    <string name="enter_loyalty_points">Enter loyalty points</string>
    <string name="loyalty_points_txt">You have % loyalty points</string>
    <string name="please_coupon_code">Please enter coupon code</string>
    <string name="please_loyalty_points">Please enter loyalty points</string>
    <string name="name_on_card">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">Cvv</string>
    <string name="enter_name_on_card">Please enter name on card</string>
    <string name="enter_card_number">Please enter card number</string>
    <string name="enter_valid_card_number">Please enter valid card number</string>
    <string name="select_date">Please select expiry date</string>
    <string name="enter_cvv">Please enter cvv number</string>
    <string name="valid_cvv">Please enter valid cvv</string>
    <string name="submit_successful">Card details Submitted successfully!</string>
    <string name="apply">Submit</string>
    <string name="enter_email">Please enter email address</string>
    <string name="enter_valid_email">Please enter valid email address</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_valid_password">Please enter valid password</string>
    <string name="pound_symbol">£</string>
    <string name="cart_added">Item have been added into cart.</string>
    <string name="free_topp">You can select $ free toppings</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="order_type">Order Type</string>
    <string name="apply_coupon_code">Apply Coupon Code</string>
    <string name="redeem_loyalty_points">Redeem Loyalty Points</string>
    <string name="no_cart_items">No items in cart.</string>
    <string name="no_extra_items">No extra items for this pizza type.</string>
    <string name="are_you_sure">Are you sure you want to delete</string>
    <string name="from_your_cart">from your cart</string>
    <string name="ok">Ok</string>
    <string name="empty_cart">Are you sure you want to empty cart?</string>
    <string name="logout_text">Are you sure you want to logout?</string>
    <string name="loyalty_points">Loyalty Points :</string>
    <string name="loyalty_txt">You dont have loyalty Points </string>
    <string name="thank_you_txt">Thank you</string>
    <string name="item_plus">Quantity added..</string>
</resources>