<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:id="@+id/relative_cart"
        >
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerVertical="true"
            android:id="@+id/img_back"
            android:layout_marginStart="@dimen/_15sdp"
            android:src="@drawable/ic_arrow_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="@dimen/_5sdp"
            android:id="@+id/txt_back"
            android:layout_toEndOf="@+id/img_back"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_centerVertical="true"
            android:text="Back"
            android:textColor="@color/black"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_below="@+id/relative_cart"
        android:background="@color/cart_empty"/>
    <RelativeLayout
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_100sdp"
        android:orientation="horizontal"
        android:layout_below="@+id/relative_cart"
        android:id="@+id/relative_dish"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/background_grey">


        <ImageView
            android:id="@+id/img_dish"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_palceholder" />

    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/relative_dish"
        android:text="@string/paper_dosa"
        android:textColor="@color/black"
        android:maxLength="20"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="20sp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_toStartOf="@+id/txt_order_amount"
        android:layout_below="@+id/relative_cart"
        android:id="@+id/txt_dish_name"
        android:layout_margin="@dimen/_10sdp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
android:layout_below="@+id/relative_cart"
        android:id="@+id/txt_order_amount"
        android:textSize="18sp"
       android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textColor="@color/black"
       android:text="$15.00"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recyler_sizes"
        android:orientation="horizontal"
        tools:itemCount="3"
        tools:listitem="@layout/differentsize_item"
        android:layout_toEndOf="@+id/relative_dish"
        android:layout_below="@+id/txt_dish_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:id="@+id/linear_types"
        android:visibility="gone"
        android:layout_toEndOf="@+id/relative_dish"
        android:layout_below="@+id/txt_dish_name"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_small"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_grey_stroke"
            android:gravity="center"
            android:padding="@dimen/_6sdp"
            android:text="@string/small"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <TextView
            android:layout_width="@dimen/_50sdp"
            android:padding="@dimen/_6sdp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:id="@+id/txt_medium"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@android:color/white"
            android:background="@drawable/background_filled_green"
            android:text="@string/medium"/>
        <TextView
            android:layout_width="@dimen/_50sdp"
            android:padding="@dimen/_6sdp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:id="@+id/txt_large"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@android:color/darker_gray"
            android:background="@drawable/background_grey_stroke"
            android:text="@string/large"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/relative_dish"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_below="@+id/recyler_sizes"
        android:padding="@dimen/_5sdp"
        android:id="@+id/relative_count"
        android:background="@drawable/background_grey_filled"
      >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/txt_count"
            android:textSize="20sp"

            android:text="1"
            android:layout_centerInParent="true"/>
    <ImageView
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:id="@+id/img_less"
        android:src="@drawable/ic_minus"/>
        <ImageView
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
            android:layout_alignParentEnd="true"
            android:id="@+id/img_more"
        android:src="@drawable/ic_plus"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_count"
        android:layout_toEndOf="@+id/relative_dish"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textSize="16sp"
        android:maxLength="100"
        android:id="@+id/txt_description"
        android:text="@string/test_txt"
        android:textColor="@android:color/black"
        android:ellipsize="end"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:layout_below="@+id/txt_description"
        android:layout_above="@+id/linear_bottom_cart"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/condiments"
            android:textSize="25sp"

            android:textColor="@color/black"
           android:layout_marginStart="@dimen/_15sdp"
            android:gravity="center"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recyler_extras"
            tools:itemCount="2"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/layout_extra_item"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_extra_items"
android:textSize="20sp"
                android:visibility="gone"
                android:textStyle="bold"
                android:id="@+id/txt_no_extra"
                android:textColor="@color/color_orange"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="2"
    android:id="@+id/linear_bottom_cart"
    android:layout_alignParentBottom="true"
    android:background="@color/color_add">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:layout_weight="1"
        android:id="@+id/linear_amount"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical"
        android:background="@drawable/edit_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:id="@+id/txt_total_count"
            android:text="@string/cancel"
            />


    </LinearLayout>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"

        android:textSize="25sp"
        android:gravity="center"
        android:id="@+id/txt_continue"
        android:textColor="@color/white"
        android:text="@string/txt_continue"
        android:background="@drawable/background_filled_orange"/>

</LinearLayout>

</RelativeLayout>