<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <ImageView
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:src="@drawable/img_arrow_lack"
        android:id="@+id/img_back"
        />
    <LinearLayout
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center"
        android:id="@+id/linear_logo"
        android:layout_marginTop="@dimen/_90sdp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_5sdp"
            android:scaleType="centerCrop"
            android:id="@+id/img_logo"
            android:layout_gravity="center"

            android:src="@drawable/ic_thankyou_checked"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="30sp"
        android:id="@+id/txt_user_thank_you"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:lineSpacingExtra="11sp"
        android:gravity="center_horizontal"
       android:text="@string/thank_you"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="11sp"
        android:text="@string/order_no"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="60sp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center"
        android:textColor="#05ac2c"
        android:lineSpacingExtra="29sp"
        android:id="@+id/txt_order_number"
        android:gravity="center_horizontal"
       android:text="023709732"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:id="@+id/txt_order_time"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        android:lineSpacingExtra="7.5sp"
        android:gravity="center"
        android:text="@string/order_serving_time"
        />

</LinearLayout>